ultimate-devops-project-demo/kubernetes/istio/vservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontendproxy-vs
  namespace: ecommerce
spec:
  hosts:
    - shop.example.com
  gateways:
    - frontendproxy-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: opentelemetry-demo-frontendproxy.ecommerce.svc.cluster.local
            port:
              number: 8080
